welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:35: error: type mismatch;
 found   : Unit
 required: Boolean
		gauche();
                      ^